compiler/tests/errortests/arithmetic/arithmetic-incomplete-mod.txt
FILENAME:3:23: error: missing right hand side expression after '%' operator
    let y : i32 = x % ;
                      ^
